Feat: pieChart Compoent

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -377,8 +377,8 @@ footer {
   }
 }
 .imgWrapperAbsolute {
-  height: 100%;
-  width: 100%;
+  // height: 100%;
+  // width: 100%;
   position: relative;
   video,
   img {
