--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,4 +1,4 @@
-@use './constants' as constants;
+@use "./constants" as constants;
 @import url(_fonts.scss);
 
 :root {
@@ -86,7 +86,7 @@ a:any-link {
     text-decoration: none;
     color: #525560;
   }
-  &[data-status='active'] {
+  &[data-status="active"] {
     font-weight: 600;
     color: var(--colorDarker);
   }
@@ -179,7 +179,7 @@ a:any-link {
       z-index: 200;
       transform: translateX(200%);
       transition: transform 300ms;
-      &[data-open='true'] {
+      &[data-open="true"] {
         transform: translateX(0%);
       }
       nav {
@@ -205,7 +205,7 @@ a:any-link {
   transition: background-color 300ms;
   &::after,
   &::before {
-    content: '';
+    content: "";
     background-color: var(--colorDarker);
     position: absolute;
     height: 2px;
@@ -219,7 +219,7 @@ a:any-link {
   &::before {
     bottom: -0.5rem;
   }
-  &[data-open='true'] {
+  &[data-open="true"] {
     background-color: transparent;
     &::after {
       transform: rotate(-45deg) translate(-0.35rem, 0.35rem);
@@ -276,7 +276,7 @@ footer {
     &:not(:hover) {
       color: #c9c9c8;
     }
-    &[data-status='active'] {
+    &[data-status="active"] {
       color: #fff;
       font-weight: 400;
     }
@@ -304,7 +304,7 @@ footer {
     outline: -webkit-focus-ring-color auto 1px;
   }
   input {
-    border: 1px solid #403f41;
+    border: 1px solid white;
     border-right: none;
     border-top-left-radius: var(--_borderRad);
     border-bottom-left-radius: var(--_borderRad);
@@ -315,7 +315,7 @@ footer {
     transition: border-color 300ms;
     position: relative;
     &::placeholder {
-      color: #403f41;
+      color: #c9c9c8;
     }
     &:user-invalid:not(:placeholder-shown) {
       border-color: red;
@@ -359,7 +359,7 @@ footer {
     font-weight: 600;
     text-transform: uppercase;
     &::before {
-      content: '';
+      content: "";
       height: 2px;
       position: absolute;
       left: 0;
@@ -445,4 +445,35 @@ footer {
 }
 .txtLightGrey {
   color: var(--colorLightGrey);
+}
+
+.stickyDonateBtn {
+  position: fixed;
+  z-index: 2;
+  background-color: #125b7a;
+  inset-inline-end: 0;
+  inset-block: 0;
+  margin-block: auto;
+  rotate: 270deg;
+  transform: translateY(90%);
+  border: none;
+  height: -moz-min-content;
+  height: min-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding-inline: 1rem;
+  padding-block: 0.5rem;
+  border-top-right-radius: 0.25rem;
+  border-top-left-radius: 0.25rem;
+  color: white;
+  font-size: 1rem;
+  letter-spacing: 1px;
+}
+
+.logoLink {
+  display: grid;
+  height: 50px;
+  overflow: hidden;
+  place-content: center;
+  place-items: center;
 }
