--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -96,8 +96,15 @@ a:any-link {
   padding-block: 1rem;
   box-shadow: 0px -1.9rem 1rem 2rem #c0c0c0;
   margin-block-end: 1rem;
+  position: fixed;
+  z-index: 200;
+  top: 0;
+  width: 100%;
+  background-color: white;
 }
-
+main {
+  padding-block-start: var(--headerHeight);
+}
 .btn {
   padding: 0.75rem 1.5rem;
   cursor: pointer;
@@ -455,11 +462,10 @@ footer {
   inset-block: 0;
   margin-block: auto;
   rotate: 270deg;
-  transform: translateY(90%);
+  -webkit-transform-origin: 51% 51%;
+  transform: translateY(140%) translateZ(0);
   border: none;
-  height: -moz-min-content;
   height: min-content;
-  width: -moz-fit-content;
   width: fit-content;
   padding-inline: 1rem;
   padding-block: 0.5rem;
@@ -468,6 +474,13 @@ footer {
   color: white;
   font-size: 1rem;
   letter-spacing: 1px;
+  cursor: pointer;
+  display: flex;
+  gap: 0.5rem;
+  transition: transform 300ms ease-in;
+  &:hover {
+    transform: translateY(130%);
+  }
 }
 
 .logoLink {
