--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,4 +1,5 @@
-@use './constants' as constants;
+@use "./constants" as constants;
+@use "./mixins" as mixins;
 @import url(_fonts.scss);
 
 :root {
@@ -102,7 +103,7 @@ a:any-link {
     text-decoration: none;
     color: #525560;
   }
-  &[data-status='active'] {
+  &[data-status="active"] {
     font-weight: 600;
     color: var(--colorDarker);
   }
@@ -202,7 +203,7 @@ main {
       z-index: 200;
       transform: translateX(200%);
       transition: transform 300ms;
-      &[data-open='true'] {
+      &[data-open="true"] {
         transform: translateX(0%);
       }
       nav {
@@ -228,7 +229,7 @@ main {
   transition: background-color 300ms;
   &::after,
   &::before {
-    content: '';
+    content: "";
     background-color: var(--colorDarker);
     position: absolute;
     height: 2px;
@@ -242,7 +243,7 @@ main {
   &::before {
     bottom: -0.5rem;
   }
-  &[data-open='true'] {
+  &[data-open="true"] {
     background-color: transparent;
     &::after {
       transform: rotate(-45deg) translate(-0.35rem, 0.35rem);
@@ -299,7 +300,7 @@ footer {
     &:not(:hover) {
       color: #c9c9c8;
     }
-    &[data-status='active'] {
+    &[data-status="active"] {
       color: #fff;
       font-weight: 400;
     }
@@ -382,7 +383,7 @@ footer {
     font-weight: 600;
     text-transform: uppercase;
     &::before {
-      content: '';
+      content: "";
       height: 2px;
       position: absolute;
       left: 0;
@@ -505,4 +506,8 @@ footer {
   overflow: hidden;
   place-content: center;
   place-items: center;
+}
+
+.h1 {
+  @include mixins.ScalingFont(40, 24, 1440);
 }
