--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,5 +1,5 @@
-@use './constants' as constants;
-@use './mixins' as mixins;
+@use "./constants" as constants;
+@use "./mixins" as mixins;
 @import url(_fonts.scss);
 
 :root {
@@ -128,9 +128,9 @@ a:any-link {
   color: var(--colorDarker);
   &:not(:hover) {
     text-decoration: none;
-    color: #525560;
+    color: var(--colorGrey);
   }
-  &[data-status='active'] {
+  &[data-status="active"] {
     font-weight: 600;
     color: var(--colorDarker);
   }
@@ -230,7 +230,7 @@ main {
       z-index: 200;
       transform: translateX(200%);
       transition: transform 300ms;
-      &[data-open='true'] {
+      &[data-open="true"] {
         transform: translateX(0%);
       }
       nav {
@@ -256,7 +256,7 @@ main {
   transition: background-color 300ms;
   &::after,
   &::before {
-    content: '';
+    content: "";
     background-color: var(--colorDarker);
     position: absolute;
     height: 2px;
@@ -270,7 +270,7 @@ main {
   &::before {
     bottom: -0.5rem;
   }
-  &[data-open='true'] {
+  &[data-open="true"] {
     background-color: transparent;
     &::after {
       transform: rotate(-45deg) translate(-0.35rem, 0.35rem);
@@ -327,7 +327,7 @@ footer {
     &:not(:hover) {
       color: #c9c9c8;
     }
-    &[data-status='active'] {
+    &[data-status="active"] {
       color: #fff;
       font-weight: 400;
     }
@@ -410,7 +410,7 @@ footer {
     font-weight: 600;
     text-transform: uppercase;
     &::before {
-      content: '';
+      content: "";
       height: 2px;
       position: absolute;
       left: 0;
@@ -426,7 +426,7 @@ footer {
   }
 
   .sectionTitle ~ p {
-    color: #525560;
+    color: var(--colorGrey);
     margin-block: 1.5rem;
   }
 }
@@ -510,6 +510,7 @@ footer {
   margin-block: auto;
   rotate: 270deg;
   -webkit-transform-origin: 51% 51%;
+  transform-origin: 51% 51%;
   transform: translateY(140%) translateZ(0);
   border: none;
   height: min-content;
