--- a/src/styles/modules/blogDetail.module.scss
+++ b/src/styles/modules/blogDetail.module.scss
@@ -1,5 +1,5 @@
-@use '../mixins' as mixins;
-@use '../constants' as constants;
+@use "../mixins" as mixins;
+@use "../constants" as constants;
 
 .blogHeader {
   margin-block-end: 0;
@@ -50,6 +50,7 @@
     @include mixins.ScalingFont(28, 18, 1440);
     line-height: 1.2;
     font-weight: 700;
+    margin-block-start: 2rem;
   }
   h1,
   h2,
@@ -59,7 +60,11 @@
   h6 {
     color: var(--colorDark);
   }
-  ul {
-    margin-inline-start: 1.25rem;
+  ul,
+  ol {
+    margin-inline-start: 2.25rem;
+  }
+  ol li {
+    padding-inline-start: 0.25rem;
   }
 }
