--- a/src/styles/modules/eventDetail.module.scss
+++ b/src/styles/modules/eventDetail.module.scss
@@ -18,10 +18,21 @@
     }
   }
 }
-.contentWrapper > * {
-  display: grid;
-  margin-block: 1rem;
-  &:last-child {
-    margin-block-end: 0;
+.contentWrapper {
+  > * {
+    display: grid;
+    margin-block: 1rem;
+    color: var(--colorGrey);
+    &:last-child {
+      margin-block-end: 0;
+    }
+    img {
+      width: 100%;
+      border-radius: calc(12px / 16);
+      display: block;
+    }
+  }
+  ul li {
+    margin-inline-start: 2rem;
   }
 }
